--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,15 @@
 {
   "name": "eqheight-coffee",
-  "version": "1.2.9",
+  "version": "1.3.3",
   "homepage": "https://github.com/jsliang/eqHeight.coffee",
   "authors": [
     "Jui-Shan Liang <jsliang.tw@gmail.com>"
   ],
   "description": "eqHeight.coffee is a jQuery plugin that stretches fluid columns to equal height.",
   "main": "jquery.eqheight.js",
-  "moduleType": [
-    "globals"
-  ],
+  "dependencies": {
+    "jquery": "1.11.1"
+  },
   "keywords": [
     "responsive",
     "column",
